# QuoteScrapping

./: README.md  data_load.py  pyproject.toml  seed.py  task1_scrapping.py
data_json/: authors.json  quotes.json
database/: models.py
